--- a/assets/scss/_cards.scss
+++ b/assets/scss/_cards.scss
@@ -1,6 +1,8 @@
 .card {
   border: 1px solid #e2e2e2;
-  margin-bottom: 0.5em;
+  border-radius: 4px;
+  margin-bottom: 0.75em;
+  background-color: white;
 }
 
 .card-header {
