--- a/assets/scss/_cards.scss
+++ b/assets/scss/_cards.scss
@@ -1,5 +1,5 @@
 .card {
-  border: 1px solid #e2e2e2;
+  border: 1px solid $gray-300;
   border-radius: 4px;
   margin-bottom: 0.75em;
   background-color: white;
@@ -7,8 +7,8 @@
 
 .card-header {
   padding: 0.5em;
-  border-bottom: 1px solid $gray-400;
-  background-color: $gray-200;
+  border-bottom: 1px solid $gray-300;
+  background-color: $gray-100;
   height: 1em;
 }
 
