--- a/assets/scss/_images.scss
+++ b/assets/scss/_images.scss
@@ -1,16 +1,20 @@
-// FROM BOOTSTRAP 5.1.3 - MIT LICENSE
-@mixin img-fluid {
-  // Part 1: Set a maximum relative to the parent
-  max-width: 100%;
-  // Part 2: Override the height to auto, otherwise images will be stretched
-  // when setting a width and height attribute on the img element.
-  height: auto;
-}
+// loosely based on bootstrap 5.1.3's img-fluid thingabit
 
 .img-fluid {
-  @include img-fluid();
+  max-width: 100%;
+  height: auto;
 }
 
 .rounded {
 	border-radius: 5%;
+}
+
+.img-pfp-profiles {
+	max-width: 100px;
+	height: 100px;
+	width: 100px;
+	top: 0;
+	left: 20px;
+	position: relative;
+	box-shadow: 0 1px 8px rgba(0,0,0,.4);
 }
