--- a/templates/prototype/user.twig
+++ b/templates/prototype/user.twig
@@ -5,7 +5,7 @@
 	{% block content %}
 	<style>
 	.channel-header-bg {
-	background-image: url('/assets/sbnext_channel_header_template.png');
+	background: url('/assets/backgrounds/{{ userpagedata.name }}.png'), linear-gradient(#888, #444);
 	background-position: center;
 	}
 </style>
