--- a/templates/prototype/watch.twig
+++ b/templates/prototype/watch.twig
@@ -77,18 +77,16 @@
 					<div class="col-4">
 						<h3 style="margin-top:0">Rate this video</h3>
 						<div>
-							<a href="#" id="{% if log %}like{% else %}action_unlogged{% endif %}" class="text-{% if total_likes != 0 %}success{% else %}body{% endif %}">
+							<button href="#" id="{% if log %}like{% else %}action_unlogged{% endif %}" data-tooltip="Like" class="button button-secondary">
 								<svg class="bi" width="20" height="20" fill="currentColor">
 									<use xlink:href="vendor/twbs/bootstrap-icons/bootstrap-icons.svg#hand-thumbs-up-fill"/>
 								</svg>
 							</a>
-							<span id="likes">{{ total_likes }}</span>
-							<a href="#" id="{% if log %}dislike{% else %}action_unlogged{% endif %}" class="text-{% if total_dislikes != 0 %}danger{% else %}body{% endif %}">
+							<button href="#" id="{% if log %}dislike{% else %}action_unlogged{% endif %}" data-tooltip="Dislike" data-tooltip="Hello, I'm on Top!" class="button button-secondary tooltip tooltip-top">
 								<svg class="bi" width="20" height="20" fill="currentColor">
 									<use xlink:href="vendor/twbs/bootstrap-icons/bootstrap-icons.svg#hand-thumbs-down-fill"/>
 								</svg>
 							</a>
-							<span id="dislikes" style="padding-right: 10px">{{ total_dislikes }}</span>
 						</div>
 					</div>
 				</div>
