--- a/assets/scss/_containers.scss
+++ b/assets/scss/_containers.scss
@@ -1,9 +1,9 @@
 .container {
     padding: 0 15px;
-	transition: max-width ease-out 1s, padding 1s;
+	transition: max-width ease-out 1s, margin-left ease-out 2s, padding ease-out 1s;
 // 576px window width and more
     @include sm {
-        padding: 0 24px;
+        padding: 0 12px;
     }
 // 992px window width and more
     @include lg {
