--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -770,9 +770,7 @@ box-sizing: border-box;
   background-size: cover;
 }
 
-/* Some basic styling to notify users
-   about the tooltips*/
-.tooltip {
+/* .tooltip {
   color: #900;
   text-decoration: none;
 }
@@ -781,7 +779,6 @@ box-sizing: border-box;
   position: relative;
 }
 
-/* Tooltip on Top */
 [data-tooltip]:hover:after {
   content: attr(data-tooltip);
   padding: 4px 8px;
@@ -791,7 +788,7 @@ box-sizing: border-box;
 
   background-color: #000;
   color: #fff;
-}
+} */
 
 /// Gradients \\\
 @import "_gradients";
