--- a/templates/prototype/components/videobox.twig
+++ b/templates/prototype/components/videobox.twig
@@ -2,7 +2,7 @@
 	<div class="card-body">
 		<div class="grid">
 			<div class="col-4">
-				<a href="watch.php?v={{ data.video_id }}&frontend=new">
+				<a href="watch.php?v={{ data.video_id }}">
 					<div class="card card-body">
 						<img class="img-fluid" src="{{ video_thumbnail(data.video_id) }}">
 					</div>
