--- a/templates/prototype/watch.twig
+++ b/templates/prototype/watch.twig
@@ -20,131 +20,131 @@
 {% block title %}{{ video.title }}{% endblock %}
 {% block content %}
 <div class="watchNext">
-<h1>{{ video.title }}</h1>
-<div class="button-group">
-<a href="user.php?name={{ video.u_name }}" class="button button-secondary"><b>{{ video.u_name }}</b></a>
-<button id="subscribe" class="button button-{% if subscribed %}secondary{% else %}primary{% endif %}" type="button" {% if not log or userdata.id == video.author %}disabled{% endif %}>{% if subscribed %}{{ __("Unfollow") }}{% elseif userdata.id == video.author %}{{ __("Edit video") }}{% else %}{{ __("Follow") }}{% endif %}</button>
-</div>
-<div class="grid">
-	<div class="col-8">
-		<div id="container" style="height: 30rem;">
-			<!--- todo: redo "video processed" message to use _error.twig -gr 7/22/2021 --->
-			{% if (video.flags b-and 2) %}
-			<div style="background-color: black; color: white; text-align: center; padding: 15rem">
-				{{ __("This video is being processed. Try again later.") }}
+	<h1>{{ video.title }}</h1>
+	<div class="button-group">
+		<a href="user.php?name={{ video.u_name }}" class="button button-secondary"><b>{{ video.u_name }}</b></a>
+		<button id="subscribe" class="button button-{% if subscribed %}secondary{% else %}primary{% endif %}" type="button" {% if not log or userdata.id == video.author %}disabled{% endif %}>{% if subscribed %}{{ __("Unfollow") }}{% elseif userdata.id == video.author %}{{ __("Edit video") }}{% else %}{{ __("Follow") }}{% endif %}</button>
+	</div>
+	<div class="grid">
+		<div class="col-8">
+			<div id="container" style="height: 30rem;">
+				<!--- todo: redo "video processed" message to use _error.twig -gr 7/22/2021 --->
+				{% if (video.flags b-and 2) %}
+				<div style="background-color: black; color: white; text-align: center; padding: 15rem">
+					{{ __("This video is being processed. Try again later.") }}
+				</div>
+				{% else %}
+				<video controls crossorigin playsinline poster="{{ video_thumbnail(video.video_id) }}"></video>
+				{% endif %}
 			</div>
-			{% else %}
-			<video controls crossorigin playsinline poster="{{ video_thumbnail(video.video_id) }}"></video>
-			{% endif %}
-		</div>
-		<script src="https://cdn.dashjs.org/latest/dash.all.min.js"></script>
-		<script src="https://unpkg.com/plyr@3.6.8/dist/plyr.min.js"></script>
-		<script src="https://cdn.polyfill.io/v2/polyfill.min.js?features=es6,Array.prototype.includes,CustomEvent,Object.entries,Object.values,URL"></script>
-		<!-- indigo player (the player we used back in the milestone/alpha days) was starting to have a lot of techincal issues by the time of alpha 3.
-			videos would randomly glitch on indigo and sometimes it wouldn't even load the goddamn video (not a ffmpeg issue this time). 
-			we at squarebracket have decided to use plyr instead of indigo. the aspect ratio is a bit wonky but that should be fixed soon 
-			-gamerappa, July 31st 2021 -->
-		<style>
-			.plyr--video {
-			height: 30rem;
-			--plyr-color-main: #2da5e5;
-			--plyr-font-family: arial, helvetica, sans-serif;
-			}
-		</style>
-		<script>
-			{% if not (video.flags b-and 2) %}
-				document.addEventListener('DOMContentLoaded', () => {
-					const source = '{{ video.videofile }}';
-					// For more dash options, see https://github.com/Dash-Industry-Forum/dash.js
-					const dash = dashjs.MediaPlayer().create();
-					const video = document.querySelector('video');
-					dash.initialize(video, source, true);
-			
-					// Update caption tracks after initializing Plyr to get the generated captions
-					// For more options see: https://github.com/sampotts/plyr/#options
-					const player = new Plyr(video);
-			
-					// Expose player and dash so they can be used from the console
-					window.player = player;
-					window.dash = dash;
-				});
-			{% endif %}
-		</script>
-		<br>
-		<div class="card">
-			<div class="card-body">
-				<div class="grid">
-					<div class="col-4">
-						<h3 style="margin-top:0">Rate this video</h3>
-						<div>
-							<button href="#" id="{% if log %}like{% else %}action_unlogged{% endif %}" data-tooltip="Like" class="button button-secondary">
-								<svg class="bi" width="20" height="20" fill="currentColor">
-									<use xlink:href="vendor/twbs/bootstrap-icons/bootstrap-icons.svg#hand-thumbs-up-fill"/>
-								</svg>
+			<script src="https://cdn.dashjs.org/latest/dash.all.min.js"></script>
+			<script src="https://unpkg.com/plyr@3.6.8/dist/plyr.min.js"></script>
+			<script src="https://cdn.polyfill.io/v2/polyfill.min.js?features=es6,Array.prototype.includes,CustomEvent,Object.entries,Object.values,URL"></script>
+			<!-- indigo player (the player we used back in the milestone/alpha days) was starting to have a lot of techincal issues by the time of alpha 3.
+				videos would randomly glitch on indigo and sometimes it wouldn't even load the goddamn video (not a ffmpeg issue this time). 
+				we at squarebracket have decided to use plyr instead of indigo. the aspect ratio is a bit wonky but that should be fixed soon 
+				-gamerappa, July 31st 2021 -->
+			<style>
+				.plyr--video {
+				height: 30rem;
+				--plyr-color-main: #2da5e5;
+				--plyr-font-family: arial, helvetica, sans-serif;
+				}
+			</style>
+			<script>
+				{% if not (video.flags b-and 2) %}
+					document.addEventListener('DOMContentLoaded', () => {
+						const source = '{{ video.videofile }}';
+						// For more dash options, see https://github.com/Dash-Industry-Forum/dash.js
+						const dash = dashjs.MediaPlayer().create();
+						const video = document.querySelector('video');
+						dash.initialize(video, source, true);
+				
+						// Update caption tracks after initializing Plyr to get the generated captions
+						// For more options see: https://github.com/sampotts/plyr/#options
+						const player = new Plyr(video);
+				
+						// Expose player and dash so they can be used from the console
+						window.player = player;
+						window.dash = dash;
+					});
+				{% endif %}
+			</script>
+			<br>
+			<div class="grid">
+				<div class="col-4">
+					<div class="button-group">
+						<button href="#" id="{% if log %}like{% else %}action_unlogged{% endif %}" class="button button-secondary">
+							<svg class="bi" width="20" height="20" fill="currentColor">
+								<use xlink:href="vendor/twbs/bootstrap-icons/bootstrap-icons.svg#hand-thumbs-up-fill"/>
+							</svg> Like
 							</a>
-							<button href="#" id="{% if log %}dislike{% else %}action_unlogged{% endif %}" data-tooltip="Dislike" data-tooltip="Hello, I'm on Top!" class="button button-secondary tooltip tooltip-top">
-								<svg class="bi" width="20" height="20" fill="currentColor">
-									<use xlink:href="vendor/twbs/bootstrap-icons/bootstrap-icons.svg#hand-thumbs-down-fill"/>
-								</svg>
+						<button href="#" id="{% if log %}dislike{% else %}action_unlogged{% endif %}" data-tooltip="Dislike" class="button button-secondary tooltip tooltip-top">
+							<svg class="bi" width="20" height="20" fill="currentColor">
+								<use xlink:href="vendor/twbs/bootstrap-icons/bootstrap-icons.svg#hand-thumbs-down-fill"/>
+							</svg>
 							</a>
-						</div>
 					</div>
+											<button href="#" id="{% if log %}quicklist{% else %}action_unlogged{% endif %}" data-tooltip="Add to Quicklist" class="button button-secondary tooltip tooltip-top">
+							<svg class="bi" width="20" height="20" fill="currentColor">
+								<use xlink:href="vendor/twbs/bootstrap-icons/bootstrap-icons.svg#plus-lg"/>
+							</svg>
+							</a>
 				</div>
 			</div>
-		</div>
-		<h3>Comments</h3>
-		<div class="card">
+			<h3>Comments</h3>
+			<div class="card">
 			<div class="card-body-fat">
-				<div class="grid" style="gap:0px">
-					<div class="col-1">
-						<img class="rounded" style="width:85%" src="{{ profile_image(userdata.name) }}">
-					</div>
-					<div class="col-11">
-						<div>
-							<textarea class="form-control" id="commentContents" style="overflow:hidden;resize:none" rows="3" 
-							placeholder="{% if log %}
-							{{ __("Enter comment here, Markdown can be used here.") }}
-							{% else %}
-							{{ __("Please sign in in order to comment.") }}
-							{% endif %}"></textarea>
-						</div>
-					</div>
+			<div class="grid" style="gap:0px">
+			<div class="col-1">
+			<img class="rounded" style="width:85%" src="{{ profile_image(userdata.name) }}">
+			</div>
+			<div class="col-11">
+			<div>
+			<textarea class="form-control" id="commentContents" style="overflow:hidden;resize:none" rows="3" 
+			placeholder="{% if log %}
+			{{ __("Enter comment here, Markdown can be used here.") }}
+			{% else %}
+			{{ __("Please sign in in order to comment.") }}
+			{% endif %}"></textarea>
+			</div>
+			</div>
+			</div>
+			<div class="grid">
+			<div class="col-offset-12">
+			<button id="{% if log %}post{% endif %}" class="button button-primary" style="margin-bottom:0;">{{ __("Comment") }}</button>
+			</div>
+			</div>
+			</div>
+			</div>
+			<div id="comment"></div>
+			{% for comment in comments %}
+			{{ comment(comment) }}
+			{% endfor %}
+		</div>
+		<div class="col-4">
+			<div class="card">
+				<div class="card-header">
+					<h5>{{ __("About this video") }}</h5>
 				</div>
-				<div class="grid">
-					<div class="col-offset-12">
-						<button id="{% if log %}post{% endif %}" class="button button-primary" style="margin-bottom:0;">{{ __("Comment") }}</button>
-					</div>
+				<div class="card-body">
+					<p>{{ __("Published: %s", [video.time | date('M j, Y')]) }}</p>
+					<p>{{ __("Uploader:") }} {{ userlink(video, 'u_') }}</p>
+					<p>{{ __("Category:") }} {{ video.category_id | category_id_to_name() }}</p>
+					<p>{{ __("Description:") }} {{ video.description }}</p>
+				</div>
+			</div>
+			<div class="card">
+				<div class="card-header">
+					<h5>{{ __("Explore More Videos") }}</h5>
+				</div>
+				<div class="card-body">
+					{% for related_video in related_videos %}
+					{{ small_video_box(related_video)}}
+					{% endfor %}
 				</div>
 			</div>
 		</div>
-		<div id="comment"></div>
-		{% for comment in comments %}
-		{{ comment(comment) }}
-		{% endfor %}
 	</div>
-	<div class="col-4">
-		<div class="card">
-			<div class="card-header">
-				<h5>{{ __("About this video") }}</h5>
-			</div>
-			<div class="card-body">
-				<p>{{ __("Published: %s", [video.time | date('M j, Y')]) }}</p>
-				<p>{{ __("Uploader:") }} {{ userlink(video, 'u_') }}</p>
-				<p>{{ __("Category:") }} {{ video.category_id | category_id_to_name() }}</p>
-				<p>{{ __("Description:") }} {{ video.description }}</p>
-			</div>
-		</div>
-		<div class="card">
-			<div class="card-header">
-				<h5>{{ __("Explore More Videos") }}</h5>
-			</div>
-			<div class="card-body">
-				{% for related_video in related_videos %}
-				{{ small_video_box(related_video)}}
-				{% endfor %}
-			</div>
-		</div>
-	</div>
-</div>
 </div>
 {% endblock %}
