--- a/templates/prototype/user.twig
+++ b/templates/prototype/user.twig
@@ -42,8 +42,12 @@
 			&bull; {{ __("%s view%s", [totalViews ?? __("Not implemented"), pluralViews]) }}
 		</p>
 	</div>
-	<div class="col-offset-12 col-4">
-		<button id="subscribe" class="button button-{% if subscribed %}secondary{% else %}primary{% endif %}" type="button" {% if not log or userpagedata.id == userdata.id %}disabled{% endif %}>{% if subscribed %}{{ __("Unfollow") }}{% elseif userpagedata.id == userdata.id %}{{ __("Edit profile") }}{% else %}{{ __("Follow") }}{% endif %}</button>
+	<div class="col-offset-12 col-4 right">
+	{% if userpagedata.id == userdata.id %}
+		<a class="button button-primary" href="settings.php">Edit profile</a>
+	{% else %}
+		<button id="subscribe" class="button button-{% if subscribed %}secondary{% else %}primary{% endif %}" type="button" {% if not log %}disabled{% endif %}>{% if subscribed %}{{ __("Unfollow") }}{% else %}{{ __("Follow") }}{% endif %}</button>
+	{% endif %}
 	</div>
 </div>
 {% if markread %}
