--- a/templates/prototype/_layout.twig
+++ b/templates/prototype/_layout.twig
@@ -23,7 +23,7 @@
 				<img id="logo" src="../assets/logo-masthead.png">
 				</a>
 				<div id="masthead-signin">
-					<a href="../logn.php.php" class="button button-primary">Sign in</a>
+					<a href="../login.php" class="button button-primary">Sign in</a>
 				</div>
 				<div id="masthead-content">
 					<class id="masthead-upload-button-group">
