--- a/templates/prototype/index.twig
+++ b/templates/prototype/index.twig
@@ -2,7 +2,7 @@
 {% block title %}Main page{% endblock %}
 	{% block precontent %}
 	<div class="main-content">
-		<div class="container">
+		<div class="container" style="max-width:1200px;">
 	  		{% if log %}
 			<div class="grid">
 				<div class="col-10">
