--- a/templates/prototype/_layout.twig
+++ b/templates/prototype/_layout.twig
@@ -39,7 +39,7 @@
 						</button>
 						<div id="masthead-search-terms">
 							<label>
-								<input type="text" placeholder="Search..">
+							<input type="text" placeholder="Search..">
 							</label>
 						</div>
 					</form>
@@ -49,11 +49,16 @@
 		{% block precontent %}{% endblock %}
 		<div class="container">
 			<div class="grid">
-				<div class="col-1">
+				<div class="col-2">
 					<div class="guide-channels-list">
-					<ul class="guide"><li class="guide-channel">
-						<a class="guide-item"><img class="thumb" src="../assets/logo_square_icon.png">squarebracket</a>
-					  </li></ul>
+						<ul class="guide">
+							<li class="guide-channel">
+								<a href="/" class="guide-item"><img class="thumb" src="../assets/logo_square_icon.png">Home</a>
+							</li>
+							<li class="guide-channel">
+								<a href="browse.php" class="guide-item"><img class="thumb" src="../assets/logo_square_icon.png">Browse</a>
+							</li>
+						</ul>
 					</div>
 				</div>
 				<div class="col-10">
