--- a/templates/prototype/watch.twig
+++ b/templates/prototype/watch.twig
@@ -20,11 +20,6 @@
 {% block title %}{{ video.title }}{% endblock %}
 {% block content %}
 <div class="watchNext">
-	<h1>{{ video.title }}</h1>
-	<div class="button-group">
-		<a href="user.php?name={{ video.u_name }}" class="button button-secondary"><b>{{ video.u_name }}</b></a>
-		<button id="subscribe" class="button button-{% if subscribed %}secondary{% else %}primary{% endif %}" type="button" {% if not log or userdata.id == video.author %}disabled{% endif %}>{% if subscribed %}{{ __("Unfollow") }}{% elseif userdata.id == video.author %}{{ __("Edit video") }}{% else %}{{ __("Follow") }}{% endif %}</button>
-	</div>
 	<div class="grid">
 		<div class="col-8">
 			<div id="container" style="height: 30rem;">
@@ -72,63 +67,65 @@
 			</script>
 			<br>
 			<div class="grid">
-				<div class="col-4">
+				<div class="col-6">
+					<h1>{{ video.title }}</h1>
+					<img src="{{ profile_image(video.u_name) }}" class="rounded" style="width:48px;float: left;margin-right:8px;">
+					<a href="user.php?name={{ video.u_name }}"><b>{{ video.u_name }}</b></a>
+					<br>
+					<button id="subscribe" class="button button-{% if subscribed %}secondary{% else %}primary{% endif %}" type="button" {% if not log or userdata.id == video.author %}disabled{% endif %}>{% if subscribed %}{{ __("Unfollow") }}{% elseif userdata.id == video.author %}{{ __("Edit video") }}{% else %}{{ __("Follow") }}{% endif %}</button>
+					<br>
 					<div class="button-group">
 						<button href="#" id="{% if log %}like{% else %}action_unlogged{% endif %}" class="button button-secondary">
 							<svg class="bi" width="20" height="20" fill="currentColor">
 								<use xlink:href="vendor/twbs/bootstrap-icons/bootstrap-icons.svg#hand-thumbs-up-fill"/>
-							</svg> Like
-							</a>
+							</svg>
+							Like
+						</button>
 						<button href="#" id="{% if log %}dislike{% else %}action_unlogged{% endif %}" data-tooltip="Dislike" class="button button-secondary tooltip tooltip-top">
 							<svg class="bi" width="20" height="20" fill="currentColor">
 								<use xlink:href="vendor/twbs/bootstrap-icons/bootstrap-icons.svg#hand-thumbs-down-fill"/>
 							</svg>
-							</a>
+						</button>
 					</div>
-											<button href="#" id="{% if log %}quicklist{% else %}action_unlogged{% endif %}" data-tooltip="Add to Quicklist" class="button button-secondary tooltip tooltip-top">
-							<svg class="bi" width="20" height="20" fill="currentColor">
-								<use xlink:href="vendor/twbs/bootstrap-icons/bootstrap-icons.svg#plus-lg"/>
-							</svg>
-							</a>
+					<button href="#" id="{% if log %}quicklist{% else %}action_unlogged{% endif %}" data-tooltip="Add to Quicklist" class="button button-secondary tooltip tooltip-top">
+						<svg class="bi" width="20" height="20" fill="currentColor">
+							<use xlink:href="vendor/twbs/bootstrap-icons/bootstrap-icons.svg#plus-lg"/>
+						</svg>
+					</button>
+					<p><b>{{ __("Published on %s", [video.time | date('M j, Y')]) }}</b></p>
+					<p>{{ video.description }}</p>
+					<p><b>{{ __("Category:") }}</b> {{ video.category_id | category_id_to_name() }}</b>
+					<p><b>{{ __("License:") }}</b> {{ __("Standard squareBracket License") }}</b>
 				</div>
-				<div class="col-8">
-							<div class="card">
-				<div class="card-header">
-					<h5>{{ __("About this video") }}</h5>
-				</div>
-				<div class="card-body">
-					<p>{{ __("Published: %s", [video.time | date('M j, Y')]) }}</p>
-					<p>{{ __("Uploader:") }} {{ userlink(video, 'u_') }}</p>
-					<p>{{ __("Category:") }} {{ video.category_id | category_id_to_name() }}</p>
-					<p>{{ __("Description:") }} {{ video.description }}</p>
-				
+				<div class="col-6 right">
+				<h1>{{ video.views }}</h1>
+				<h4>Ratio: {{ videoRatio }}</h4>
 				</div>
 			</div>
-			</div></div>
 			<h3>Comments</h3>
 			<div class="card">
-			<div class="card-body-fat">
-			<div class="grid" style="gap:0px">
-			<div class="col-1">
-			<img class="rounded" style="width:85%" src="{{ profile_image(userdata.name) }}">
-			</div>
-			<div class="col-11">
-			<div>
-			<textarea class="form-control" id="commentContents" style="overflow:hidden;resize:none" rows="3" 
-			placeholder="{% if log %}
-			{{ __("Enter comment here, Markdown can be used here.") }}
-			{% else %}
-			{{ __("Please sign in in order to comment.") }}
-			{% endif %}"></textarea>
-			</div>
-			</div>
-			</div>
-			<div class="grid">
-			<div class="col-offset-12">
-			<button id="{% if log %}post{% endif %}" class="button button-primary" style="margin-bottom:0;">{{ __("Comment") }}</button>
-			</div>
-			</div>
-			</div>
+				<div class="card-body-fat">
+					<div class="grid" style="gap:0px">
+						<div class="col-1">
+							<img class="rounded" style="width:85%" src="{{ profile_image(userdata.name) }}">
+						</div>
+						<div class="col-11">
+							<div>
+								<textarea class="form-control" id="commentContents" style="overflow:hidden;resize:none" rows="3" 
+								placeholder="{% if log %}
+								{{ __("Enter comment here, Markdown can be used here.") }}
+								{% else %}
+								{{ __("Please sign in in order to comment.") }}
+								{% endif %}"></textarea>
+							</div>
+						</div>
+					</div>
+					<div class="grid">
+						<div class="col-offset-12">
+							<button id="{% if log %}post{% endif %}" class="button button-primary" style="margin-bottom:0;">{{ __("Comment") }}</button>
+						</div>
+					</div>
+				</div>
 			</div>
 			<div id="comment"></div>
 			{% for comment in comments %}
