--- a/templates/prototype/watch.twig
+++ b/templates/prototype/watch.twig
@@ -99,7 +99,7 @@
 				</div>
 				<div class="col-6 right">
 				<h1>{{ video.views }}</h1>
-				<h4>Ratio: {{ videoRatio }}</h4>
+				<h4>Ratio: {{ videoRatio }}%</h4>
 				</div>
 			</div>
 			<h3>Comments</h3>
