--- a/templates/prototype/_layout-login.twig
+++ b/templates/prototype/_layout-login.twig
@@ -6,11 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		{% block head %}{% endblock %}
 		<!-- REDO THIS REDO THIS REDO THIS REDO THIS -->
-		{% if theme != 'vanilla' %}
-		<link rel="stylesheet" id="bootstrap" href="assets/bs{% if theme == 'dark' %}-dark{% elseif theme == 'finalium' %}-finalium{% elseif theme == 'finalium-dark' %}-finalium-dark{% endif %}.css" type="text/css">
-		{% else %}
-		<link href="assets/bs-vanilla.css" rel="stylesheet" id="bootstrap">
-		{% endif %}
+		<link rel="stylesheet" id="bootstrap" href="assets/bs-finalium.css" type="text/css">
 	    <link rel="stylesheet" id="bootstrap_dashboard" href="bootstrap/signin.css" type="text/css">
 		<script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
 		<script src="https://cdn.jsdelivr.net/npm/js-cookie@rc/dist/js.cookie.min.js"></script>
