--- a/templates/prototype/_layout.twig
+++ b/templates/prototype/_layout.twig
@@ -7,7 +7,7 @@
 		<link rel="stylesheet" id="bootstrap" href="assets/css/style.css" type="text/css">
 		<script src="https://cdn.jsdelivr.net/npm/js-cookie@rc/dist/js.cookie.min.js"></script>
 		<script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
-		<script src="assets/common-sbnext.js"></script>
+		<script src="assets/common.js"></script>
 		<script>
 			subscribe_string = '{{ __("Follow") }}';
 			unsubscribe_string = '{{ __("Unfollow") }}';
